--- a/package.json
+++ b/package.json
@@ -15,14 +15,13 @@
     "@apollo/react-hooks": "^3.1.3",
     "apollo-boost": "^0.4.4",
     "baseui": "^9.65.3",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^5.3.3",
     "chart.js": "^2.9.3",
     "fs": "0.0.1-security",
-    "gh-pages": "^2.1.1",
+    "gh-pages": "^6.2.0",
     "graphql": "^14.5.8",
     "lottie-web": "^5.7.11",
     "node-fetch": "^2.6.7",
-    "node-sass": "^4.14.1",
     "prettier-package-json": "^2.1.3",
     "radium": "^0.26.0",
     "react": "^16.10.2",
@@ -33,8 +32,9 @@
     "react-helmet": "^6.1.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^5.0.1",
     "react-spring": "^8.0.27",
+    "sass": "^1.81.0",
     "styled-components": "^5.1.1",
     "styletron-engine-atomic": "^1.4.6",
     "styletron-react": "^5.2.7",
